external/lib25519-20241004/build/arm64/unified/sc25519barrettS/1/shared/result-compile-sc25519_barrett
sc25519_barrett.S:276:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
